remove useless css + solve uikit extra width bug on mobile screen

--- a/app/assets/stylesheets/components/navigations/_table_of_content.scss
+++ b/app/assets/stylesheets/components/navigations/_table_of_content.scss
@@ -1,11 +1,12 @@
 .table-of-content {
-  padding: 1rem;
+  padding: 0.25rem;
   background-color: $bg-clear-tone;
   font-family: var(--ff-handwrite);
 
   h5 {
     background-color: $complementary;
-    padding: 0.5rem;
+    font-size: var(--fs-s);
+    padding: 0.25rem;
     border-radius: 0.5rem;
     text-wrap: nowrap;
   }
@@ -16,8 +17,9 @@
     color: $major-dark;
 
     li {
-      border-radius: 0.5rem;
-      padding: 0.25rem 0 0.25rem 0.5rem;
+      border-radius: 0.25rem;
+      padding: 0.125rem 0 0.125rem 0.25rem;
+      font-size: var(--fs-xs);
 
       &:hover {
         background-color: $major-light;
@@ -32,6 +34,20 @@
     a {
       color: inherit;
       text-decoration: none;
+    }
+  }
+}
+
+@media (min-width: 40em) {
+  .table-of-content {
+    padding: 1rem;
+
+    h5 {
+      padding: 0.5rem;
+    }
+
+    li {
+      padding: 0.25rem 0 0.25rem 0.5rem;
     }
   }
 }
