--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -28,7 +28,7 @@ $facebook-gradient: linear-gradient(0deg, rgba(106, 0, 255, 1) 0%, rgba(248, 14,
 
 // for UI Kit demo
 .color {
-  width: 120px;
+  width: 15%;
   aspect-ratio: 1/1;
   border-radius: 50%;
 }
